登录注册完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.jackson.time-zone=GMT+8
 # jsp≈‰÷√
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
+
+
+#spring.mvc.hiddenmethod.filter.enabled=true
