第二次提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
+org.hibernate.type.descriptor.sql.BasicBinde=trace
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm
 spring.jackson.time-zone=GMT+8
+
+
 
 # jsp≈‰÷√
 #spring.mvc.view.prefix=/
